--- a/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
+++ b/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
@@ -1442,6 +1442,7 @@
     <TypeScriptCompile Include="Js\components\flashcard\flashcard.service.ts" />
     <TypeScriptCompile Include="Js\components\flashcard\interaction.directive.ts" />
     <TypeScriptCompile Include="Js\components\item\dropFileClass.directive.ts" />
+    <TypeScriptCompile Include="Js\components\item\item.service.ts" />
     <TypeScriptCompile Include="Js\components\library\classChooseCreateDialog.controller.ts" />
     <TypeScriptCompile Include="Js\components\library\classChooseUnfollowDialog.controller.ts" />
     <TypeScriptCompile Include="Js\components\library\classChoose.controller.ts" />
@@ -2280,7 +2281,6 @@
     <Content Include="Js\components\quiz\popup\quiz.challenge.module.js" />
     <Content Include="Js\components\quiz\popup\quiz.score.controller.js" />
     <Content Include="Js\components\item\item.controller.js" />
-    <Content Include="Js\components\item\item.service.js" />
     <Content Include="Js\components\item\upload.controller.js" />
     <Content Include="Js\components\library\library.controller.js" />
     <Content Include="Js\components\quiz\stopwatch.filter.js" />
