final touches to flashcard promo

--- a/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
+++ b/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
@@ -2518,6 +2518,7 @@
     <Content Include="Views\Flashcard\Index.cshtml" />
     <Content Include="Views\Home\Promotion.cshtml" />
     <Content Include="Views\Dashboard\_FlashcardsPromo.cshtml" />
+    <Content Include="Views\Flashcard\_Promo.cshtml" />
     <None Include="Views\Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
