--- a/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
+++ b/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
@@ -1296,6 +1296,7 @@
     <Content Include="Images\Site\no_search_results.png" />
     <Content Include="Images\Site\no_uni.png" />
     <Content Include="Images\Site\profileIcons.svg" />
+    <Content Include="Images\Site\promo.png" />
     <Content Include="Images\Site\promo_bg.png" />
     <Content Include="Images\Site\search_uni.png" />
     <Content Include="Images\HomePage2\testimonial1_he.jpg" />
