Fix stuff on changing universities in home page
flashcard base 62

--- a/Zbang.Cloudents.Mvc4WebRole/Web.Release.config
+++ b/Zbang.Cloudents.Mvc4WebRole/Web.Release.config
@@ -27,9 +27,9 @@
     <httpCookies requireSSL="true" xdt:Transform="Replace" domain="spitball.co" />
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <caching >
-      <outputCache defaultProvider="CloudentsOutsputCacheProvider" xdt:Transform="Insert">
+      <outputCache defaultProvider="CloudentsOutputCacheProvider" xdt:Transform="Insert">
         <providers>
-          <add name="CloudentsOutsputCacheProvider" type="Zbang.Cloudents.Mvc4WebRole.Helpers.CloudentsOutsputCacheProvider, Zbang.Cloudents.Mvc4WebRole"
+          <add name="CloudentsOutputCacheProvider" type="Zbang.Cloudents.Mvc4WebRole.Helpers.CloudentsOutputCacheProvider, Zbang.Cloudents.Mvc4WebRole"
             host="zboxcache.redis.cache.windows.net"
             port="6380"
             applicationName="cloudents"
@@ -42,7 +42,7 @@
           <add name="NoCache" duration="0" varyByParam="none" location="Server" noStore="true" />
           <add name="PartialPage" duration="86400" location="ServerAndClient" varyByParam="lang;version"  />
           <add name="FullPage" duration="86400" varyByParam="none" varyByCustom="Auth;Lang"/>
-          <add name="HomePage" duration="1" varyByParam="invId;universityName;step" varyByCustom="Auth;Lang;Uni" location="Server"/>
+          <add name="HomePage" duration="86400" varyByParam="invId;universityName;step" varyByCustom="Auth;Lang;Uni;Promo" location="Server"/>
           <add name="ItemPage" duration="3600" varyByParam="itemid" varyByCustom="Lang;Auth;" location="Server" />
           <add name="BoxPage" duration="3600" varyByParam="boxId;part" varyByCustom="Lang;Auth;" location="Server" />
         </outputCacheProfiles>
