--- a/Zbang.Cloudents.Mvc4WebRole/Web.config
+++ b/Zbang.Cloudents.Mvc4WebRole/Web.config
@@ -82,7 +82,7 @@
           <add name="PartialPage" duration="1" location="ServerAndClient" varyByParam="lang;version" />
           <add name="FullPage" duration="1" varyByParam="none" varyByCustom="Auth;Lang" />
           <!-- We can do any but then we need to fix the inject cookie -->
-          <add name="HomePage" duration="1" varyByParam="invId;universityName;step" varyByCustom="Auth;Lang;Uni" location="Server" />
+          <add name="HomePage" duration="1" varyByParam="invId;universityName;step" varyByCustom="Auth;Lang;Uni;Promo" location="Server" />
           <add name="ItemPage" duration="1" varyByParam="itemid" varyByCustom="Auth;Lang" location="Server" />
           <add name="BoxPage" duration="1" varyByParam="boxId;part" varyByCustom="Auth;Lang" location="Server" />
         </outputCacheProfiles>
