--- a/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
+++ b/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
@@ -639,6 +639,9 @@
     <Content Include="bower_components\angular-timeago\src\timeAgo.js" />
     <Content Include="bower_components\angular-vs-repeat\src\angular-vs-repeat.js" />
     <Content Include="bower_components\angular-vs-repeat\src\angular-vs-repeat.min.js" />
+    <Content Include="bower_components\clipboard\dist\clipboard.js" />
+    <Content Include="bower_components\clipboard\dist\clipboard.min.js" />
+    <Content Include="bower_components\clipboard\package.js" />
     <Content Include="bower_components\malihu-custom-scrollbar-plugin\jquery.mCustomScrollbar.concat.min.js" />
     <Content Include="bower_components\malihu-custom-scrollbar-plugin\jquery.mCustomScrollbar.css" />
     <Content Include="bower_components\malihu-custom-scrollbar-plugin\jquery.mCustomScrollbar.js" />
@@ -648,6 +651,11 @@
     <Content Include="bower_components\ng-scrollbars\gulpfile.js" />
     <Content Include="bower_components\ng-scrollbars\LICENSE.txt" />
     <Content Include="bower_components\ng-scrollbars\src\scrollbars.js" />
+    <Content Include="bower_components\ngclipboard\dist\ngclipboard.js" />
+    <Content Include="bower_components\ngclipboard\dist\ngclipboard.min.js" />
+    <Content Include="bower_components\ngclipboard\Gruntfile.js" />
+    <Content Include="bower_components\ngclipboard\src\ngclipboard.js" />
+    <Content Include="bower_components\ngclipboard\test\test.js" />
     <Content Include="bower_components\oclazyload\dist\modules\ocLazyLoad.core.js" />
     <Content Include="bower_components\oclazyload\dist\modules\ocLazyLoad.directive.js" />
     <Content Include="bower_components\oclazyload\dist\modules\ocLazyLoad.loaders.common.js" />
@@ -911,6 +919,22 @@
     <Content Include="bower_components\angular-vs-repeat\.bower.json" />
     <Content Include="bower_components\angular-vs-repeat\bower.json" />
     <Content Include="bower_components\angular-vs-repeat\LICENSE" />
+    <Content Include="bower_components\ngclipboard\.bower.json" />
+    <Content Include="bower_components\ngclipboard\.editorconfig" />
+    <Content Include="bower_components\ngclipboard\.gitignore" />
+    <Content Include="bower_components\ngclipboard\.jscsrc" />
+    <Content Include="bower_components\ngclipboard\.jshintrc" />
+    <Content Include="bower_components\ngclipboard\.travis.yml" />
+    <Content Include="bower_components\ngclipboard\bower.json" />
+    <Content Include="bower_components\ngclipboard\contributing.md" />
+    <Content Include="bower_components\ngclipboard\LICENSE" />
+    <Content Include="bower_components\ngclipboard\package.json" />
+    <Content Include="bower_components\ngclipboard\src\.jshintrc" />
+    <Content Include="bower_components\clipboard\.bower.json" />
+    <Content Include="bower_components\clipboard\bower.json" />
+    <Content Include="bower_components\clipboard\contributing.md" />
+    <Content Include="bower_components\clipboard\package.json" />
+    <Content Include="bower_components\clipboard\readme.md" />
     <None Include="compilerconfig.json" />
     <None Include="compilerconfig.json.defaults">
       <DependentUpon>compilerconfig.json</DependentUpon>
@@ -1459,6 +1483,7 @@
     <TypeScriptCompile Include="Js\components\search\search.controller.ts" />
     <TypeScriptCompile Include="Js\components\search\search.service.ts" />
     <TypeScriptCompile Include="Js\components\search\searchTrigger.controller.ts" />
+    <TypeScriptCompile Include="Js\components\share\share.service.ts" />
     <TypeScriptCompile Include="Js\components\share\shareDialog.controller.ts" />
     <TypeScriptCompile Include="Js\components\uploadWrapper.controller.ts" />
     <TypeScriptCompile Include="Js\components\user\updates.service.ts" />
@@ -2297,7 +2322,6 @@
     <Content Include="Js\components\quiz\stopwatch.module.js" />
     <Content Include="Js\components\share\invite.controller.js" />
     <Content Include="Js\components\account\account.controller.js" />
-    <Content Include="Js\components\share\share.service.js" />
     <Content Include="Js\components\user\userdetails.controller.js" />
     <Content Include="Js\components\userdetails\userdetails.module.js" />
     <Content Include="Js\components\user\user.controller.js" />
@@ -2522,6 +2546,7 @@
     <Content Include="Views\Home\Promotion.cshtml" />
     <Content Include="Views\Dashboard\_FlashcardsPromo.cshtml" />
     <Content Include="Views\Flashcard\_Promo.cshtml" />
+    <Content Include="Views\Share\ShareDialog.cshtml" />
     <None Include="Views\Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
