Flashcard share and seo

--- a/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
+++ b/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
@@ -1192,6 +1192,7 @@
     <Content Include="Gruntfile.js" />
     <Content Include="gulpfile.js" />
     <Content Include="Images\3rdParty\fbShare.png" />
+    <Content Include="Images\3rdParty\fbFlashcard.png" />
     <Content Include="Images\3rdParty\logo_120_4_google.png" />
     <Content Include="Images\aboutUs\aboutBg.jpg" />
     <Content Include="Images\aboutUs\dean.png" />
@@ -2683,6 +2684,7 @@
     <EmbeddedResource Include="Controllers\Resources\SeoBaseUniversityResources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>SeoBaseUniversityResources1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Controllers\Resources\SeoResources.he.resx" />
     <EmbeddedResource Include="Controllers\Resources\SeoResources.resx">
