started openMenu directive - not fully functional (the menu content appears outside of the element) + fixed small issue on item page

--- a/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
+++ b/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
@@ -1500,6 +1500,7 @@
     <TypeScriptCompile Include="Js\shared\itemThumbnail.ts" />
     <TypeScriptCompile Include="Js\shared\loader.ts" />
     <TypeScriptCompile Include="Js\shared\notification.ts" />
+    <TypeScriptCompile Include="Js\shared\openMenu.directive.ts" />
     <TypeScriptCompile Include="Js\shared\resourceManager.ts" />
     <TypeScriptCompile Include="Js\shared\sbScroll.directive.ts" />
     <TypeScriptCompile Include="Js\shared\showToaster.service.ts" />
