--- a/Zbang.Zbox.DomainNew/Zbang.Zbox.Domain.csproj
+++ b/Zbang.Zbox.DomainNew/Zbang.Zbox.Domain.csproj
@@ -65,6 +65,7 @@
     <Compile Include="AcademicBox.cs" />
     <Compile Include="AcademicBoxClosed.cs" />
     <Compile Include="Answer.cs" />
+    <Compile Include="Badge.cs" />
     <Compile Include="Box.cs" />
     <Compile Include="ChatRoom.cs" />
     <Compile Include="Comment.cs">
@@ -206,6 +207,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Mappings\Flashcard.hbm.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Mappings\Gamification.hbm.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
