--- a/Zbang.Zbox.Infrastructure/Zbang.Zbox.Infrastructure.csproj
+++ b/Zbang.Zbox.Infrastructure/Zbang.Zbox.Infrastructure.csproj
@@ -257,7 +257,7 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Enums\Resources\Gamification.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Gamification.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Enums\Resources\QuestionResource.he.resx" />
