Fix issue with redis cache and mobile
remove unused files
start to work on box url change

--- a/Zbang.Cloudents.MobileApp/Web.config
+++ b/Zbang.Cloudents.MobileApp/Web.config
@@ -29,6 +29,7 @@
     <add key="DataCache" value="AzureMVC1" />
     <add key="SearchProduction" value="true" />
     <add key="platform" value="mobile" />
+    <add key="CacheUse" value="true"/>
   <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://[your namespace].servicebus.windows.net;SharedSecretIssuer=owner;SharedSecretValue=[your secret]" /></appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
