--- a/Zbang.Zbox.Domain.Commands/Zbang.Zbox.Domain.Commands.csproj
+++ b/Zbang.Zbox.Domain.Commands/Zbang.Zbox.Domain.Commands.csproj
@@ -58,6 +58,7 @@
     <Compile Include="AddFlashcardCommand.cs" />
     <Compile Include="AddFlashcardPinCommand.cs" />
     <Compile Include="AddItemCommentCommand.cs" />
+    <Compile Include="AddQuizLikeCommand.cs" />
     <Compile Include="AddReplyToCommentCommand.cs" />
     <Compile Include="AddCommentCommandResult.cs" />
     <Compile Include="AddFileToBoxCommand.cs" />
@@ -97,6 +98,7 @@
     <Compile Include="DeleteItemCommentReplyCommand.cs" />
     <Compile Include="DeleteItemTabCommand.cs" />
     <Compile Include="DeleteNodeFromLibraryCommand.cs" />
+    <Compile Include="DeleteQuizLikeCommand.cs" />
     <Compile Include="DeleteReplyCommand.cs" />
     <Compile Include="DeleteCommentCommand.cs" />
     <Compile Include="DeleteUpdatesCommand.cs" />
