Starting of design of gamification

--- a/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
+++ b/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
@@ -1504,6 +1504,7 @@
     <TypeScriptCompile Include="Js\components\user\user.routes.ts" />
     <TypeScriptCompile Include="Js\components\user\user.service.ts" />
     <TypeScriptCompile Include="Js\components\user\items.controller.ts" />
+    <TypeScriptCompile Include="Js\components\user\userdetails.controller.ts" />
     <TypeScriptCompile Include="Js\doubleclick.config.ts" />
     <TypeScriptCompile Include="Js\menu\sidemenu.controller.ts" />
     <TypeScriptCompile Include="Js\routerHelperProvider.ts" />
