--- a/Zbang.Cloudents.MobileApp/Web.config
+++ b/Zbang.Cloudents.MobileApp/Web.config
@@ -26,7 +26,7 @@
     <add key="MS_NotificationHubName" value="Overridden by portal settings" />
     <add key="ValidAudience" value="https://www.spitball.co" />
     <add key="ValidIssuer" value="https://www.spitball.co" />
-    <add key="DataCache" value="AzureMVC1" />
+    <add key="DataCache" value="MobileApp" />
     <add key="SearchProduction" value="true" />
     <add key="platform" value="mobile" />
     <add key="CacheUse" value="true"/>
