Fixed stuff on box leaderboard

--- a/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
+++ b/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
@@ -1295,6 +1295,21 @@
     <Content Include="Images\Features\quiz_he.png" />
     <Content Include="Images\Features\uni_en.png" />
     <Content Include="Images\Features\uni_he.png" />
+    <Content Include="Images\Gamification\badge_Explorer.png" />
+    <Content Include="Images\Gamification\badge_Explorer_hidden.png" />
+    <Content Include="Images\Gamification\badge_Helpful Harry.png" />
+    <Content Include="Images\Gamification\badge_Helpful Harry_hidden.png" />
+    <Content Include="Images\Gamification\badge_Kiss from Keanu.png" />
+    <Content Include="Images\Gamification\badge_Kiss from Keanu_hidden.png" />
+    <Content Include="Images\Gamification\badge_Quizzy Lizzy.png" />
+    <Content Include="Images\Gamification\badge_Quizzy Lizzy_hidden.png" />
+    <Content Include="Images\Gamification\badge_Spitballer.png" />
+    <Content Include="Images\Gamification\badge_Spitballer_hidden.png" />
+    <Content Include="Images\Gamification\level_Freshman_hidden.png" />
+    <Content Include="Images\Gamification\level_Professor_hidden.png" />
+    <Content Include="Images\Gamification\level_Scholar_hidden.png" />
+    <Content Include="Images\Gamification\level_Sophomore_hidden.png" />
+    <Content Include="Images\Gamification\level_Upperclassman_hidden.png" />
     <Content Include="Images\HomePage2\apps.png">
       <DependentUpon>apps.sprite</DependentUpon>
     </Content>
@@ -1314,11 +1329,11 @@
     <Content Include="Images\Site\community-bg.png" />
     <Content Include="Images\Site\course_choose_popup.png" />
     <Content Include="Images\Site\create_uni_text_blue.png" />
-    <Content Include="Images\Site\gamification_level_Freshman.png" />
-    <Content Include="Images\Site\gamification_level_Professor.png" />
-    <Content Include="Images\Site\gamification_level_Scholar.png" />
-    <Content Include="Images\Site\gamification_level_Sophomore.png" />
-    <Content Include="Images\Site\gamification_level_Upperclassman.png" />
+    <Content Include="Images\Gamification\level_Freshman.png" />
+    <Content Include="Images\Gamification\level_Professor.png" />
+    <Content Include="Images\Gamification\level_Scholar.png" />
+    <Content Include="Images\Gamification\level_Sophomore.png" />
+    <Content Include="Images\Gamification\level_Upperclassman.png" />
     <Content Include="Images\Site\Leaderboard-bg-l.png" />
     <Content Include="Images\Site\Leaderboard-bg-r.png" />
     <Content Include="Images\Site\Leaderboard-title.png" />
